--- a/Gears/Gears/Gears.vcxproj
+++ b/Gears/Gears/Gears.vcxproj
@@ -147,6 +147,7 @@
     <Text Include="input.txt" />
     <Text Include="input2.txt" />
     <Text Include="input1.txt" />
+    <Text Include="output.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
