--- a/Gears/Gears/Gears.vcxproj.filters
+++ b/Gears/Gears/Gears.vcxproj.filters
@@ -29,5 +29,8 @@
     <Text Include="input.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="output.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
